# crypto-microstructure

./: .gitignore  FINDINGS.md  LICENSE  MORNING.md  Makefile  NIGHT_LOG.md  PUBLISH.md  README.md  REPLICATION.md  SIDE_CONVENTION.md  analyze.py  diagnose_outage.py  logger.py  logger_watchdog.py  pyproject.toml  trades_logger.py  venue_logger.py  venue_trades_logger.py
output/: analysis_anomalies.md  analysis_crossvenue.md  analysis_epps.md  analysis_imbalance.md  analysis_leadlag.md  analysis_seasonality.md  analysis_tape.md  analysis_volclustering.md  backtest.md  data_quality.md  replication_h1.md  replication_results.md  venue_quality.md
scripts/: analysis_anomalies.py  analysis_crossvenue.py  analysis_epps.py  analysis_imbalance.py  analysis_leadlag.py  analysis_seasonality.py  analysis_tape.py  analysis_volclustering.py  build_data.py  build_findings.py  build_venue_data.py  replication_h1.py  replication_run.py  run_backtest.py  validate_trade_side.py  verify_trade_capture.py  verify_venue_capture.py
src/microstructure/: analysis.py  anomaly.py  backtest.py  features.py  ingest.py  parquet.py  quality.py  venue.py
src/microstructure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_anomaly.py  test_backtest.py  test_features.py  test_ingest.py  test_reconnect_policy.py  test_replication.py  test_tape_stats.py  test_trade_side.py  test_venue.py  test_watchdog.py
